--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-before-after-slider-component": "^1.1.8",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-phone-number-input": "^3.3.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "swiper": "^10.0.4",
