--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-before-after-slider-component": "^1.1.8",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.10",
     "react-icons": "^4.10.1",
     "react-phone-number-input": "^3.3.0",
     "react-router-dom": "^6.14.1",
